[tool.poetry]
name = "us-accidents"
version = "0.1.0"
description = ""
authors = ["Hugo Ludemann <hugo.ludemann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.12.0"
jupyter = "^1.1.1"
sqlalchemy = "^2.0.36"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
pyarrow = "^18.0.0"
geopandas = "^1.0.1"
geoalchemy2 = "^0.15.2"
tabulate = "^0.9.0"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
